# GameLens-Application

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app_core/: config.py  (+4 more)
backend/GameLens-Event-Classifier/: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
backend/GameLens-Event-Classifier/gamelens/: db.py
backend/GameLens-Event-Classifier/gamelens/prediction/: config.py  event.py  inference.py  model.py
backend/GameLens-Event-Classifier/gamelens/routes/: classifier.py
backend/GameLens-Event-Classifier/training/: dataset_creation.py  training.py
backend/GameLens-Event-Classifier/training/runs/20260301_132236/: config.json  history.csv  history.json  test_metrics.json  val_metrics_epoch_001.json  val_metrics_epoch_002.json  val_metrics_epoch_003.json  val_metrics_epoch_004.json  val_metrics_epoch_005.json  val_metrics_epoch_006.json  val_metrics_epoch_007.json  val_metrics_epoch_008.json  val_metrics_epoch_009.json
backend/GameLens-Event-Classifier/training/runs/20260301_195303/: config.json  history.csv  history.json  test_metrics.json  val_metrics_epoch_001.json  val_metrics_epoch_002.json  val_metrics_epoch_003.json  val_metrics_epoch_004.json  val_metrics_epoch_005.json  val_metrics_epoch_006.json  val_metrics_epoch_007.json  val_metrics_epoch_008.json  val_metrics_epoch_009.json  val_metrics_epoch_010.json  val_metrics_epoch_011.json  val_metrics_epoch_012.json  val_metrics_epoch_013.json
backend/GameLens-Event-Classifier/training/runs/20260301_200855/: classes.json  config.json  history.csv  history.json  test_metrics.json  val_metrics_epoch_001.json  val_metrics_epoch_002.json  val_metrics_epoch_003.json  val_metrics_epoch_004.json  val_metrics_epoch_005.json  val_metrics_epoch_006.json  val_metrics_epoch_007.json  val_metrics_epoch_008.json  val_metrics_epoch_009.json  val_metrics_epoch_010.json  val_metrics_epoch_011.json  val_metrics_epoch_012.json  val_metrics_epoch_013.json  val_metrics_epoch_014.json  val_metrics_epoch_015.json  val_metrics_epoch_016.json
(+69 files in other folders)
